fixed the alignment of the nav bar

--- a/codeup-design.css
+++ b/codeup-design.css
@@ -4,10 +4,10 @@ body {
 }
 /* Header Formatting */
 .title {
-    font-size: 2.5em;
+    font-size: 3em;
 }
 .subtitle {
-    font-size: 1.75em;
+    font-size: 2em;
 }
 /* Custom Fonts */
 .anton {
